--- a/mutiple url/url.html
+++ b/mutiple url/url.html
@@ -1,1 +1,8 @@
-<a href="#" class="yourlink">Click Here</a>
+<!DOCTYPE html>
+<html>
+    <body>
+
+          <a href="url.js" class="yourlink">Click Here</a>
+
+    </body>
+</html>
