--- a/mutiple url/url.html
+++ b/mutiple url/url.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
     <body>
-
-          <a href="url.js" class="yourlink">Click Here</a>
-
+        <p>
+             <a href="https://link-url-here.org">Link text Here</a>
+        </p>
     </body>
 </html>
