--- a/mutiple url/url.html
+++ b/mutiple url/url.html
@@ -2,7 +2,7 @@
 <html>
     <body>
         <p>
-             <a href="https://link-url-here.org">Link text Here</a>
+            <a href="url.js" class="yourlink">Click Here</a>
         </p>
     </body>
 </html>
