--- a/mutiple url/url.html
+++ b/mutiple url/url.html
@@ -2,7 +2,7 @@
 <html>
     <body>
         <p>
-            <a href="url.js" class="yourlink">Click Here</a>
+            <a href="" id="multi-link-opener" onclick="openMultipleLinks(myLinks)">Click To Open Links</a>
         </p>
     </body>
 </html>
